# notebook

./: .pylintrc  README.md  main.py  pyproject.toml  settings.json
data/: __all_models.py  catergories.py  db_session.py  items.py
db/: notebook.db
reports/: report_00_28_20_12_2022.xlsx
tests/: __main__.py
udz/: theodolit_dfd.rsf
ui/: filter_form.py  filter_form.ui  item_action.py  item_action.ui  main_window.py  main_window.ui  msg_form.py  msg_form.ui  price_error.py  price_error.ui
